Final Menu tweaks and updates

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
+    	<link rel="stylesheet" type="text/css" href="style.css"/>
         <title>Homepage</title>
     </head>
+
+<!-- The following part is dedicated to the menu. #menu is the ID for the CSS -->
 
 		<ul id="menu">
 		    <li><a href="index.html">Home</a></li>
@@ -16,6 +19,8 @@
 		    </li>
 		    <li><a href="#">Contact</a></li>
 		</ul>
+
+<!-- Moving on to the body -->
 
     <body>
         <p> Hello! </p>
