Added lorem ipsum text amd bg-color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Homepage</title>
     </head>
 
-<!-- The following part is dedicated to the menu. #menu is the ID for the CSS -->
+<!-- The following part is dedicated to the menu. #menu is the ID for the CSS. Please note the menu bug on 'school' dropdown-->
 
 		<ul id="menu">
 		    <li><a href="index.html">Home</a></li>
@@ -17,13 +17,24 @@
 		            <li><a href="unity.html">Unity</a></li>
 		        </ul>
 		    </li>
-		    <li><a href="#">Contact</a></li>
+		    <li><a href="contact.html">Contact</a></li>
 		</ul>
 
 <!-- Moving on to the body -->
 
     <body>
-        <p> Hello! </p>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a tincidunt lorem, nec tempus turpis. Cras rutrum est quis arcu maximus iaculis. Etiam et quam ut ipsum viverra aliquam. Praesent id sapien nisi. Morbi sit amet fermentum turpis. Sed iaculis efficitur dui, ac tempus elit iaculis vitae. Nulla dapibus feugiat arcu vitae finibus. Donec vitae dapibus enim, sed scelerisque diam. Curabitur et consectetur tellus. Ut iaculis velit eu risus ornare, ut luctus dolor dapibus. In efficitur mauris non augue dignissim commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. <br> <br>
+
+Quisque eget interdum metus, id interdum erat. Phasellus suscipit fringilla nisl, pharetra congue lorem. Integer ullamcorper augue nec auctor vestibulum. Mauris nec dictum sapien. Donec iaculis tincidunt ligula sit amet consequat. In vitae ligula et nisl consequat vulputate. Proin quis turpis quis ligula rhoncus dictum a quis nulla. Mauris lobortis sed odio vel maximus. <br> <br>
+
+
+Donec volutpat sapien sed velit condimentum, sit amet ultrices magna fermentum. Ut luctus pellentesque arcu, bibendum lobortis lectus. Aenean vitae commodo ligula, sit amet facilisis massa. Sed sit amet nulla lobortis nibh euismod ornare eu rutrum quam. Nunc suscipit, turpis sit amet pharetra convallis, sem nulla ultricies tellus, at consequat nunc ipsum eget diam. Vivamus ultricies odio dolor, eget maximus nisi mollis vitae. Fusce imperdiet tortor eu enim bibendum, ac ornare eros bibendum. Sed eleifend euismod euismod. Mauris cursus, lacus at ornare scelerisque, eros elit ultrices lorem, quis volutpat mi urna vitae arcu. Integer tristique nulla a erat tempor ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a nunc ut quam lacinia dignissim. Nullam magna ante, molestie ac vehicula eget, mollis ut ante. Nulla id lacus blandit, dignissim libero nec, porta enim. In rutrum quis tortor at pretium. Aliquam suscipit mi in neque tincidunt, vitae consequat ex mattis. <br> <br>
+
+
+Aenean nec lacus nec tellus lacinia dictum. Ut et arcu venenatis, pharetra mi pulvinar, ullamcorper lorem. Etiam euismod eros nec sagittis tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam eu magna vel justo rhoncus aliquet euismod sed ipsum. Phasellus aliquet gravida ligula vel facilisis. Quisque a vulputate leo. Sed venenatis nec dolor sollicitudin sodales. Pellentesque aliquet bibendum dignissim. <br> <br>
+
+
+Sed sed dolor vel erat porttitor tristique. Sed dictum odio luctus fermentum molestie. Curabitur nec iaculis metus, sit amet consequat augue. In eget sem porttitor, imperdiet tortor nec, porttitor risus. Sed diam lorem, vulputate a fermentum vitae, lacinia ac felis. Nam faucibus convallis consequat. Maecenas eu sem eu sem vulputate semper vel vel elit. Donec sagittis, odio vitae scelerisque suscipit, est metus semper ex, sed pulvinar augue dui nec massa. Etiam justo dolor, vestibulum ac diam vitae, auctor egestas lacus. Ut dapibus sodales sollicitudin. </p>
     </body
 
 </html>
