--- a/school.html
+++ b/school.html
@@ -1,7 +1,22 @@
 <html>
     <head>
-        <title>My KLM project</title>
+    	<link rel="stylesheet" type="text/css" href="style.css"/>
+        <title>School</title>
     </head>
+
+    		<ul id="menu">
+		    <li><a href="index.html">Home</a></li>
+		    <li><a href="about.html">About</a></li>
+		    <li>
+		        <a href="school.html">School</a>
+		        <ul>
+		            <li><a href="klm.html">KLM</a></li>
+		            <li><a href="linux.html">Linux</a></li>
+		            <li><a href="unity.html">Unity</a></li>
+		        </ul>
+		    </li>
+		    <li><a href="contact.html">Contact</a></li>
+		</ul>
 
     <body>
         <p> Hello! </p>
