--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
+<!doctype html public "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+
 <html>
     <head>
     	<link rel="stylesheet" type="text/css" href="style.css"/>
@@ -17,7 +19,7 @@
 		    </li>
 		    <li><a href="contact.html">Contact</a></li>
 		</ul>
-		
+
     <body>
         <p> Hello! </p>
     </body
